fix article category layout issue

--- a/lovgarden/Public/Home/less/article.less
+++ b/lovgarden/Public/Home/less/article.less
@@ -7,6 +7,9 @@
             padding: 20px;
             color: #6e6363;
         }
+        p.article-words {
+            text-indent: 2em;
+        }
     }
     .products-read-more {
         text-align: center;
@@ -34,6 +37,9 @@
             padding: 20px;
             color: #6e6363;
         }
+        p.article-words {
+            text-indent: 2em;
+        }
     }
     .products-read-more {
         text-align: center;
@@ -60,6 +66,10 @@
             border-top: 1px solid #d5d4d4;
             padding: 20px;
             color: #6e6363;
+        }
+        p.article-words {
+            text-indent: 2em;
+            padding: 0 1em 0 1em;
         }
         .product-grid .product-summary .product-summary__info .product-summary__pricing {
             width: 39%;
